--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,28 @@
     <string name="sort_by_album_name">Sort by album name</string>
     <string name="sort_by_artist">Sort by artist</string>
     <string name="sort_by_title">Sort by title</string>
+    <string name="about">About</string>
+    <string name="github_link">
+        <a href="https://github.com/tilk/cdlc_player/">https://github.com/tilk/cdlc_player/</a>
+    </string>
+    <string name="copyright">Copyright © 2021  Marek Materzok</string>
+    <string name="copyright_notice"><![CDATA[
+        <p>
+            This program is free software: you can redistribute it and/or modify
+            it under the terms of the GNU General Public License as published by
+            the Free Software Foundation, either version 3 of the License, or
+            (at your option) any later version.
+        </p>
+        <p>
+            This program is distributed in the hope that it will be useful,
+            but WITHOUT ANY WARRANTY; without even the implied warranty of
+            MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+            GNU General Public License for more details.
+        </p>
+        <p>
+            You should have received a copy of the GNU General Public License
+            along with this program.  If not, see
+            &lt;<a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>&gt;.
+        </p>
+    ]]></string>
 </resources>
