--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 <resources>
     <string name="app_name">CDLC Player</string>
     <string name="add_song">Add song</string>
+    <string name="scan_dir">Scan directory</string>
     <string name="settings">Settings</string>
     <string name="sort">Sort</string>
     <string name="sort_by_album_year">Sort by album year</string>
